# app/Http/Controllers/Swagger/EmployeeController.php
@@ -17,6 +17,7 @@ use App\Http\Controllers\Controller;
  *             @OA\Property(property="patronymic", type="string", example="Рахимович"),
  *             @OA\Property(property="address", type="string", example="Худжанд, 20мкр"),
  *             @OA\Property(property="phone", type="integer", example=923002000),
+ *             @OA\Property(property="salary", type="float", example= 5000.00),
  *             @OA\Property(property="date_of_birthday", type="date", example="2000-09-14"),
  *             @OA\Property(property="position", type="string", example="Работник"),
  *             @OA\Property(property="status", type="boolean", example=1),
@@ -78,6 +79,7 @@ use App\Http\Controllers\Controller;
  *             @OA\Property(property="patronymic", type="string", example="Рахимович"),
  *             @OA\Property(property="address", type="string", example="Худжанд, 20мкр"),
  *             @OA\Property(property="phone", type="integer", example=923002000),
+ *             @OA\Property(property="salary", type="float", example= 5000.00),
  *             @OA\Property(property="date_of_birthday", type="date", example="2000-09-14"),
  *             @OA\Property(property="position", type="string", example="Работник"),
  *             @OA\Property(property="status", type="boolean", example=1),
